--- a/bin2019/App.config
+++ b/bin2019/App.config
@@ -6,7 +6,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Password=bestunion;User ID=JEast;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.0.116)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=orcl)))" />
+    <add name="ConnectionString" connectionString="Password=bestunion;User ID=JEast;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.101.80)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=orcl)))" />
   </connectionStrings>
   <appSettings>
     <add key="lastusername" value="root" />
@@ -20,7 +20,7 @@
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
       <setting name="DefaultAppSkin" serializeAs="String">
-        <value>Skin/Office 2007 Green</value>
+        <value>Skin/Seven Classic</value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
         <value></value>
