--- a/bin2019/JEast.csproj
+++ b/bin2019/JEast.csproj
@@ -57,6 +57,11 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
+    <Reference Include="Interop.TaxCardX, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <HintPath>bin\Debug\Interop.TaxCardX.dll</HintPath>
+    </Reference>
     <Reference Include="Oracle.ManagedDataAccess, Version=4.121.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\Oracle.ManagedDataAccess.dll</HintPath>
@@ -171,6 +176,12 @@
     </Compile>
     <Compile Include="BusinessObject\InvoiceItems.Designer.cs">
       <DependentUpon>InvoiceItems.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BusinessObject\Report_CasherStat.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="BusinessObject\Report_CasherStat.Designer.cs">
+      <DependentUpon>Report_CasherStat.cs</DependentUpon>
     </Compile>
     <Compile Include="BusinessObject\Report_Checkout.cs">
       <SubType>UserControl</SubType>
@@ -474,6 +485,12 @@
     <Compile Include="windows\Frm_ReportCheckin.Designer.cs">
       <DependentUpon>Frm_ReportCheckin.cs</DependentUpon>
     </Compile>
+    <Compile Include="windows\Frm_Report_CasherStat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="windows\Frm_Report_CasherStat.Designer.cs">
+      <DependentUpon>Frm_Report_CasherStat.cs</DependentUpon>
+    </Compile>
     <Compile Include="windows\Frm_Report_Checkout.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -572,6 +589,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BusinessObject\InvoiceItems.resx">
       <DependentUpon>InvoiceItems.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BusinessObject\Report_CasherStat.resx">
+      <DependentUpon>Report_CasherStat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="BusinessObject\Report_Checkout.resx">
       <DependentUpon>Report_Checkout.cs</DependentUpon>
@@ -696,6 +716,9 @@
     <EmbeddedResource Include="windows\Frm_ReportCheckin.resx">
       <DependentUpon>Frm_ReportCheckin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="windows\Frm_Report_CasherStat.resx">
+      <DependentUpon>Frm_Report_CasherStat.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="windows\Frm_Report_Checkout.resx">
       <DependentUpon>Frm_Report_Checkout.cs</DependentUpon>
     </EmbeddedResource>
@@ -744,17 +767,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <COMReference Include="TaxCardX">
-      <Guid>{7126812A-8D2A-11D6-9C69-00E04C103A76}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-    </COMReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="abiword-4.ico" />
